--- a/main.html
+++ b/main.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>IMDb Movie Detail</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="movie-detail-page">
+    <!-- Movie Poster -->
+    <img src="https://via.placeholder.com/300x450" alt="Movie Poster" class="moviePic">
 
+    <!-- Movie Description -->
+    <p class="movieDetail">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin luctus convallis eros, ac vehicula nisl placerat et. Nulla facilisi. Fusce a urna tincidunt, tristique lorem eu, feugiat justo. Mauris at urna erat. Sed vulputate odio at turpis faucibus, at vestibulum arcu sollicitudin.
+    </p>
+  </div>
+
+  <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
